k8s/deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dih 
  namespace: dih 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dih 
    spec:
      containers:
      - image: enolfc/dih:latest
        name: dih
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 3000M
          requests:
            cpu: 200m
            memory: 2000M
        volumeMounts:
        - name: config-volume
          mountPath: "/config/"
          readOnly: True
        - name: db-volume
          mountPath: "/db/"
      volumes:
      - name: config-volume
        secret:
          secretName: dih-config 
      - name: db-volume
        persistentVolumeClaim:
          claimName: dih-db-dir
