k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dih 
  namespace: dih 
spec:
  selector:
    app: dih
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
